--- a/README
+++ b/README
@@ -13,10 +13,10 @@ following link:
 ------------------------------------------------------------
 If you use our dataset, please cite the following paper:
 
-Weiyu Zhang, Menglong Zhu and Konstantinos Derpanis,  "From Actemes 
-to Action: A Strongly-supervised Representation for Detailed 
-Action Understanding" International Conference on Computer 
-Vision (ICCV). Dec 2013.
+Weiyu Zhang, Menglong Zhu and Konstantinos Derpanis,  "From 
+Actemes to Action: A Strongly-supervised Representation for
+Detailed Action Understanding" International Conference on 
+Computer Vision (ICCV). Dec 2013.
 
 ------------------------------------------------------------
                        Dataset Content
@@ -38,15 +38,16 @@ The dataset is organized in the following format:
         visualize.m
         ...
 
-The image frames are located in the /frames folder.
-All frames are in RGB. The resolution of the frames 
-are within the size of 640x480.
+The image frames are located in the /frames folder.  All 
+frames are in RGB. The resolution of the frames are within
+the size of 640x480.
 
 The annotations are in the /labels folder. The sequence
 annotations include class label, coarse viewpoint, human 
 body joints (2D locations and visibility), 2D bounding 
 boxes, and training/testing label. Each annotation is a 
 separate MATLAB .mat file under /labels.
+
 
 An example annotation looks as follows in MATLAB:
 
